test/modules/errors/error-global-used-in-init-dispatch.good
error-global-used-in-init-dispatch.chpl:8: error: module-scope variable 'globalR' may be used before it is initialized
error-global-used-in-init-dispatch.chpl:8: note: 'globalR' declared and initialized here
error-global-used-in-init-dispatch.chpl:8: note: calls function 'makeR'
error-global-used-in-init-dispatch.chpl:19: note: mentions module-scope variable 'globalR' not initialized yet
